serveur name correction

--- a/src/SERVER/CMakeLists.txt
+++ b/src/SERVER/CMakeLists.txt
@@ -4,8 +4,8 @@ project(SERVER C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(SERVER main.c
-        Server/Server_t.c
-        Server/Server_t.h
+        Server/Server.c
+        Server/Server.h
         SessionClients/SessionClient.c
         SessionClients/SessionClient.h
         Utilitaires/Utilitaires.c
