--- a/src/SERVER/CMakeLists.txt
+++ b/src/SERVER/CMakeLists.txt
@@ -4,15 +4,16 @@ project(SERVER C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(SERVER main.c
-        Server/Server.c
-        Server/Server.h
-        SessionClients/SessionClient.c
-        SessionClients/SessionClient.h
-        Utilitaires/Utilitaires.c
+        Server/server.c
+        Server/server.h
+        SessionClients/sessionClient.c
+        SessionClients/sessionClient.h
         my.h
         Clock/Clock.c
         Clock/Clock.h
-        Commandes/Commandes.c
-        Commandes/Commandes.h
-        Server/Server.c
+        Commandes/commandes.c
+        Commandes/commandes.h
+        Server/server.c
+        Utilitaires/utilitaires.c
+        Utilitaires/utilitaires_2.c
 )
