--- a/src/SERVER/CMakeLists.txt
+++ b/src/SERVER/CMakeLists.txt
@@ -6,14 +6,13 @@ set(CMAKE_C_STANDARD 11)
 add_executable(SERVER main.c
         Server/server.c
         Server/server.h
-        SessionClients/session_client.c
+        SessionClients/session_client_ai.c
         SessionClients/session_client.h
         my.h
         Clock/clock.c
         Clock/clock.h
         Commandes/commandes.c
         Commandes/commandes.h
-        Server/server.c
         Utilitaires/utilitaires.c
         Utilitaires/utilitaires_2.c
         Server/server_2.c
@@ -21,4 +20,7 @@ add_executable(SERVER main.c
         Server/server_4.c
         Server/server_5.c
         Commandes/commandes_2.c
+        SessionClients/session_client_gui.c
+        Map/map.c
+        Map/map.h
 )
