comande ia implementation : look & inventory

--- a/src/SERVER/CMakeLists.txt
+++ b/src/SERVER/CMakeLists.txt
@@ -34,4 +34,5 @@ add_executable(SERVER main.c
         Utilitaires/error.c
         Map/map_management.c
         Map/map_entities.c
+        Utilitaires/look_utils.c
 )
