serveur crash correction

--- a/src/SERVER/CMakeLists.txt
+++ b/src/SERVER/CMakeLists.txt
@@ -39,4 +39,6 @@ add_executable(SERVER main.c
         Server/server_egg_utils.c
         Logger/logger.c
         Logger/logger.h
+        Utilitaires/dynamic_buffer.c
+        Utilitaires/dynamic_buffer.h
 )
